--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -1,5 +1,18 @@
 ---
 title: APIs in the UK government
+weight: 10
 ---
 
-<%= partial 'catalogue/index' %>
+# APIs in the UK government
+
+This API catalogue is for central government and local government APIs.
+
+If you're working on an API that publishes open data or connects government with other organisations, industry or consumers, we’d like to invite you to publish details of it in this catalogue. You can publish details of your API by submitting a [GitHub Issue](https://github.com/alphagov/api-catalogue/issues).
+
+Collecting a list of government APIs will help us understand:
+
+* what APIs are published
+* where API development is taking place
+* whether APIs are suitable for reuse
+
+If you have any questions, please contact: <api-standards-request@digital.cabinet-office.gov.uk>
