--- a/source/central/index.html.md.erb
+++ b/source/central/index.html.md.erb
@@ -10,5 +10,10 @@ The API catalogue contains the following central government APIs:
 - [GOV.UK Notify](notify/#gov-uk-notify-api)
 - [GOV.UK Pay](pay/#gov-uk-pay-api)
 - [GOV.UK Platform as a Service (PaaS)](paas/#gov-uk-platform-as-a-service-paas-api)
-- [GOV.UK: Content-api](content/#gov-uk-content-api)
-- [ONS: Statistics API](ons-stats/#ons-statistics-api)
+- [GOV.UK Content-api](content/#gov-uk-content-api)
+- [ONS Statistics API](ons-stats/#ons-statistics-api)
+- [GOV.UK Search API](search/#gov-uk-search-api)
+- [GOV.UK Organisations API](organisations/#gov-uk-organisations-api)
+- [GOV.UK Governments API](governments/#gov-uk-governments-api)
+- [GOV.UK Document Checking Service Pilot API](dcs-pilot/#gov-uk-document-checking-service-pilot-api)
+- [GOV.UK World locations API](world-locations/#gov-uk-world-locations-api)
